force-app/main/default/objects/Permission_Risk_Log__c/Permission_Risk_Log__c.object-meta.xml
<CustomObject>
    <label>Permission Risk Log</label>
    <pluralLabel>Permission Risk Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>PRL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores the results of a Permission Risk Analyzer org scan. One record per user per scan.</description>
</CustomObject>