force-app/main/default/objects/Permission_Risk_Log__c/fields/DangerousPermissions__c.field-meta.xml
<CustomField>
    <fullName>DangerousPermissions__c</fullName>
    <label>Dangerous Permissions</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Pipe-delimited list of risky permissions found for this user (e.g. ModifyAllData|ManageUsers)</description>
</CustomField>