force-app/main/default/objects/Permission_Risk_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Full analysis payload for this user, stored as JSON</description>
</CustomField>