force-app/main/default/objects/Permission_Risk_Log__c/fields/OrgHealthScore__c.field-meta.xml
<CustomField>
    <fullName>OrgHealthScore__c</fullName>
    <label>Org Health Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Overall org risk score at the time of this scan (same value across all records in a scan batch)</description>
</CustomField>