force-app/main/default/objects/Permission_Risk_Log__c/fields/RecommendedActions__c.field-meta.xml
<CustomField>
    <fullName>RecommendedActions__c</fullName>
    <label>Recommended Actions</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Human-readable remediation suggestions for this user's risk findings</description>
</CustomField>