force-app/main/default/objects/Permission_Risk_Log__c/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <label>Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>0</defaultValue>
    <description>Numeric risk score from 0-100+ calculated by PermissionRiskAnalyzerService</description>
</CustomField>