force-app/main/default/objects/Permission_Risk_Log__c/fields/ScanBatchId__c.field-meta.xml
<CustomField>
    <fullName>ScanBatchId__c</fullName>
    <label>Scan Batch Id</label>
    <type>Text</type>
    <length>36</length>
    <description>Groups all Permission_Risk_Log__c records created by the same scan run, so trend/history queries can filter by scan.</description>
</CustomField>