force-app/main/default/objects/Permission_Risk_Log__c/fields/ScanDate__c.field-meta.xml
<CustomField>
    <fullName>ScanDate__c</fullName>
    <label>Scan Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>