force-app/main/default/objects/Permission_Risk_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Permission Risk Logs</relationshipLabel>
    <relationshipName>Permission_Risk_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>